cmake_minimum_required(VERSION 3.26)
project(Lessons C)

set(CMAKE_C_STANDARD 23)

add_executable(Lessons
        main.c
        lesson-03.cpp
        lesson-04.cpp
        lesson-05.cpp
        lesson-06.cpp
        lesson-07.cpp
        lesson-08.cpp
        lesson-09.cpp
        lesson-10.cpp
        lesson-11.cpp
        lesson-12.cpp
        lesson-13.cpp
        lesson-14.cpp
        lesson-15.cpp
        lesson-16.cpp
        lesson-17.cpp
#        lesson-31.c
#        lesson-31-lib.h
#        lesson-31-lib.c
#        lesson-31.c
#        lesson-23.cpp
)
